@@ -1,3 +1,7 @@
+2005-09-06  David Moore  <dcm@acm.org>
+
+	* iptc/main.c: -m option will add dataset if not present
+
 2005-08-29  David Moore  <dcm@acm.org>
 
 	* iptc/main.c: allow running on multiple files at once
